# Dream.os-Core

./: .env.dreamos.example  .gitignore  AGENTS.md  AGENT_AUDIT.md  CONSOLIDATION_MANIFEST.md  MASTER_TASK_LIST.md  MASTER_TASK_LOG.md  NEXT_UP.md  PRD.md  PRODUCTION_READINESS.md  PROJECT_STRUCTURE_TREE.md  README.md  README_CURATED.md  ROADMAP.md  architecture_map.md  audit_report.md  conftest.py  domain_model.md  manifest.json  prioritized_fix_plan.md  pytest.ini  repo_inventory.md  run.py  run_log.md  test_assessment.md  truth_matrix.md
00_foundation/: IMPLEMENTATION_ROADMAP.md  PROJECT_REQUIREMENTS_ANALYSIS.md  PROJECT_STATUS.md  TECHNICAL_SPECIFICATIONS.md
00_index/: README_CURATED.md
01_core/: AGENT_README.md  CONFIG_STRUCTURE.md  FSM_STRUCTURE.md  README.md
01_runtime_core/: AGENT_RESCUE_SYSTEM.md  AutonomousModes.md  INTER_AGENT_COMMUNICATION_GUIDE.md  INTER_AGENT_FRAMEWORK_SUMMARY.md  PROJECT_FOCUS_CONFIGURATION.md
02_architecture/: FINAL_PROJECT_STRUCTURE.md  (+1 more)
dreamos/: README.md  __init__.py  pyproject.toml
dreamos/cli/: main.py  repl.py
dreamos/config/: __init__.py  goals.py  settings.py
dreamos/core/: __init__.py  agent.py  memory.py  message_router.py  routing.py  swarm.py  task_adapter.py
dreamos/core/resilience/: __init__.py  circuit_breaker.py
dreamos/logging/: __init__.py  logger.py
dreamos/plans/: __init__.py  decomposer.py  veto.py
dreamos/tests/: test_agent.py  test_memory.py  test_routing.py  test_swarm.py  test_tools.py
dreamos/tools/: __init__.py  base.py  git_tools.py  lint_tools.py  scan_tools.py  test_tools.py
(+1128 files in other folders)
